--- a/index.html
+++ b/index.html
@@ -3,34 +3,313 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>SimplyChocolate</title>
   </head>
   <body>
-    <!--                Page Header            -->
     <header>
+      <a href="./index.html">
+        SIMPLY CHOCOLATE
+        <img src="./images/chocolate.png" alt="icon" />
+      </a>
       <nav>
-        <a href="./index.html"
-          >SIMPLY CHOCOLATE
-          <img src="./img/chocolate.jpg" alt="logo" width="24"
-        /></a>
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="">How it's made?</a></li>
-
           <li><a href="">Chocolate is loved</a></li>
         </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href=""
+            ><img src="./images/facebook.png" alt="Facebook" width="40"
+          /></a>
+        </li>
+        <li>
+          <a href=""
+            ><img src="./images/instagram.png" alt="Instagram" width="40"
+          /></a>
+        </li>
+        <li>
+          <a href=""
+            ><img src="./images/twitter.png" alt="Twitter(X)" width="40"
+          /></a>
+        </li>
+      </ul>
+    </header>
+
+    <main>
+      <!-- Section-Hero -->
+
+      <section>
+        <h1>
+          Treat yourself or a loved one to our finest ingredients for a moment
+          of pure delight!
+        </h1>
+        <ul>
+          <li><button type="button">Buy now</button></li>
+          <li><button type="button">How it's made</button></li>
+        </ul>
+        <button type="button">scroll down</button>
+      </section>
+
+      <!-- Benefits -->
+      <section>
+        <h2>Benefits</h2>
         <ul>
           <li>
-            <a href=""><img src="./img/facebook.jpg" alt="facebook" /></a>
+            <h3>Unsurpassed taste</h3>
+            <p>
+              Crafted with the finest quality cocoa beans and a dedication to
+              perfection, each bite is a decadent experience that simply cannot
+              be matched. Savor the richness and complexity of our Unsurpassed
+              Taste and discover a new level of chocolate bliss.
+            </p>
           </li>
+
           <li>
-            <a href=""><img src="./img/instagram.jpg" alt="instagram" /></a>
+            <h3>Affordable price</h3>
+            <p>
+              Indulge in high-quality chocolate without breaking the bank with
+              Simply Chocolate's selection of affordable treats. Enjoy
+              mouth-watering truffles and velvety chocolate bars without
+              sacrificing taste or quality. Browse our selection and indulge in
+              affordable luxury today.
+            </p>
           </li>
+
           <li>
-            <a href=""><img src="./img/twitter.jpg" alt="twitter" /></a>
+            <h3>Own production</h3>
+            <p>
+              We take pride in our own production process, ensuring that every
+              step is carefully crafted to perfection. From selecting the finest
+              ingredients to handcrafting each piece, our attention to detail is
+              evident in every bite.
+            </p>
           </li>
         </ul>
+      </section>
+
+      <!-- ingridients -->
+      <section>
+        <h2>It all adds up to one exceptional taste sensation</h2>
+        <ul>
+          <li>
+            <img src="./img/img-1.jpg" alt="Milk chocolate" />
+            <p>MILK CHOCOLATE</p>
+          </li>
+          <li>
+            <img src="./img/img-2.jpg" alt="Milk" />
+            <p>MILK</p>
+          </li>
+          <li>
+            <img src="./img/img-3.jpg" alt="Nuts" />
+            <p>NUTS</p>
+          </li>
+          <li>
+            <img src="./img/img-4.jpg" alt="sweet chocolate" />
+            <p>SEMI - SWEET CHOCOLATE</p>
+          </li>
+          <li>
+            <img src="./img/img-5.jpg" alt="cacao" />
+            <p>CACAO</p>
+          </li>
+          <li>
+            <img src="./img/img-6.jpg" alt="raspberry" />
+            <p>RASPBERRY</p>
+          </li>
+          <li>
+            <img src="./img/img-7.jpg" alt="coconut oil" />
+            <p>COCONUT OIL</p>
+          </li>
+        </ul>
+      </section>
+      <!-- Made -->
+      <section>
+        <h2>How it's made?</h2>
+        <img src="./img/image.jpg" alt="" />
+        <h3>
+          Try our chocolates today and discover the perfect balance of flavor
+        </h3>
+        <ul>
+          <li>
+            Heat the milk in a saucepan without bringing it to a boil. Add sugar
+            and cocoa powder.
+          </li>
+          <li>
+            At the same time, prepare a water bath. Melt the butter on it.
+          </li>
+          <li>
+            "Mix" the milk mixture and already liquid butter. Mix thoroughly
+            with a silicone spatula so that the mass becomes uniform and silky.
+          </li>
+          <li>Heat the mixture over low heat, letting it barely boil.</li>
+          <li>
+            Pour the chocolate into special containers (can be replaced with ice
+            molds). Allow to cool and harden.
+          </li>
+        </ul>
+      </section>
+
+      <!-- Product  -->
+      <section>
+        <h2>Our products</h2>
+        <ul>
+          <li>
+            <img src="./img/product1.jpg" alt="" />
+            <h3>Orange</h3>
+            <p>Dark chocolate</p>
+            <button type="button">45 UAH</button>
+          </li>
+          <li>
+            <img src="./img/product2.jpg" alt="" />
+            <h3>Apple&Cranberry</h3>
+            <p>Milk chocolate</p>
+            <button type="button">50 UAH</button>
+          </li>
+          <li>
+            <img src="./img/product3.jpg" alt="" />
+            <h3>Lime&Sea salt</h3>
+            <p>Dark chocolate</p>
+            <button type="button">66 UAH</button>
+          </li>
+          <li>
+            <img src="./img/product4.jpg" alt="" />
+            <h3>Pineapple</h3>
+            <p>Dark chocolate</p>
+            <button type="button">54 UAH</button>
+          </li>
+
+          <li>
+            <img src="./img/product5.jpg" alt="" />
+            <h3>Classic</h3>
+            <p>Milk chocolate</p>
+            <button type="button">45 UAH</button>
+          </li>
+          <li>
+            <img src="./img/product6.jpg" alt="" />
+            <h3>Honey</h3>
+            <p>Milk chocolate</p>
+            <button type="button">50 UAH</button>
+          </li>
+          <li>
+            <img src="./img/product7.jpg" alt="" />
+            <h3>Roasted fruits</h3>
+            <p>Dark chocolate</p>
+            <button type="button">66 UAH</button>
+          </li>
+          <li>
+            <img src="./img/product8.jpg" alt="" />
+            <h3>Classic</h3>
+            <p>White chocolate</p>
+            <button type="button">54 UAH</button>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Sellers  -->
+      <section>
+        <h2>Top sellers</h2>
+        <ul>
+          <li>
+            <img src="./img/sellers1.jpg" alt="nuts" />
+            <p>CHOCOLATE WITH NUTS</p>
+          </li>
+          <li>
+            <img src="./img/sellers2.jpg" alt="fruits" />
+            <p>CHOCOLATE WITH FRUITS</p>
+          </li>
+          <li>
+            <img src="./img/sellers3.jpg" alt="dark chocolate" />
+            <p>DARK CHOCOLATE</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Review -->
+      <section>
+        <h2>Chocolate is loved</h2>
+        <ul>
+          <li>
+            <img src="./img/review1.jpg" alt="women" />
+            <h3>Victoria Dobrzhanska</h3>
+            <p>
+              I love this chocolate bar. Perfect combination of light crispy
+              wafer, covered in a thin layer chocolate.
+            </p>
+          </li>
+          <li>
+            <img src="./img/review2.jpg" alt="men" />
+            <h3>Nazar Babenko</h3>
+            <p>
+              This chocolate confection is a delight! A delight! The wafer is
+              light and crisp, the hazelnut cream is smooth, and the chocolate
+              is good.
+            </p>
+          </li>
+          <li>
+            <img src="./img/review3.jpg" alt="women" />
+            <h3>Olena Kampusch</h3>
+            <p>
+              Chocolate is a family favourite treat. Love the delicious smooth
+              chocolate and the creaminess inside. The wafer is soft but
+              crunchy.
+            </p>
+          </li>
+        </ul>
+        <button type="button">Leave a review</button>
+      </section>
+    </main>
+    <!-- Footer -->
+    <footer>
+      <p>Chocolate a delicious cure for a bad day</p>
+      <p>Social networks</p>
+      <ul>
+        <li>
+          <a href="">
+            <svg>
+              <use
+                href="./img/icons.svg#icon-facebook"
+                width="24"
+                height="24"
+              ></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <svg>
+              <use
+                href="./img/icons.svg#icon-instagram"
+                width="24"
+                height="24"
+              ></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <svg>
+              <use href="./img/icons.svg#icon-twitter" width="24"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <p>Contact us</p>
+      <address>
+        <ul>
+          <li><a href="tel:+380684439426">+380 (68) 443-94-26</a></li>
+          <li>
+            <a href="mailto:simplychoc@gmail.com"></a>simplychoc@gmail.com
+          </li>
+        </ul>
+      </address>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="">How it's made?</a></li>
+          <li><a href="">Chocolate is loved</a></li>
+        </ul>
       </nav>
-    </header>
+    </footer>
   </body>
 </html>
